//
//  GHConstants.swift
//  GitHubUsersRepos
//
//  Created by Sirisha Dudiki on 10/8/19.
//  Copyright © 2019 GitHubUsersRepos. All rights reserved.
//

import Foundation

let GHUserTableViewCellIdentifier = "GHUserTableViewCellIdentifier"
let GHUserProfileSegueIdentifier = "GHUserProfileSegueIdentifier"
let GHUserRepoTableViewCellIdentifier = "GHUserRepoTableViewCellIdentifier"
let GHPageTitle = "GitHub Searcher"
let githubLoginName = "sirishadudiki"
let githubToken = "47513e2796c3e7b65c74351e96ff2cf774017219"
