...
        self.performSegue(withIdentifier: GHUserProfileSegueIdentifier, sender: self)
    }


    override func prepare(for segue: UIStoryboardSegue, sender: Any?) {
        // back button
        let backBarButton = UIBarButtonItem.init(title: "Users", style: .plain, target: nil, action: nil)
        self.navigationItem.backBarButtonItem = backBarButton


        if let controller = segue.destination as? GHUserProfileViewController
        {
            controller.loginName = selectedLoginName
...
