...
                                <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
                                <connections>
                                    <outlet property="dataSource" destination="BYZ-38-t0r" id="T0G-Sy-YLq"/>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="s9w-Lt-Gi2"/>
                                </connections>
                            </tableView>
                            <searchBar contentMode="redraw" placeholder="Search for Users" translatesAutoresizingMaskIntoConstraints="NO" id="jU4-n6-owm">
                                <rect key="frame" x="25" y="25" width="364" height="56"/>
                                <textInputTraits key="textInputTraits"/>
                                <userDefinedRuntimeAttributes>
                                    <userDefinedRuntimeAttribute type="string" keyPath="accessibilityLabel" value="SearchUsers"/>
                                </userDefinedRuntimeAttributes>
                                <connections>
...
